--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,14 @@ updates:
     directory: /
     schedule:
       interval: daily
+    open-pull-requests-limit: 1000
   - package-ecosystem: docker
     directory: /
     schedule:
       interval: daily
+    open-pull-requests-limit: 1000
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: daily
+    open-pull-requests-limit: 1000
